; ModuleID = '/home/carl/AnghaBench/php-src/ext/spl/extr_spl_array.c_spl_array_compare_objects.c'
source_filename = "/home/carl/AnghaBench/php-src/ext/spl/extr_spl_array.c_spl_array_compare_objects.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_6__ = type { %struct.TYPE_5__ }
%struct.TYPE_5__ = type { i32* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i32*)* @spl_array_compare_objects to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @spl_array_compare_objects(i32* %0, i32* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca %struct.TYPE_6__*, align 8
  %8 = alloca %struct.TYPE_6__*, align 8
  %9 = alloca i32, align 4
  store i32* %0, i32** %3, align 8
  store i32* %1, i32** %4, align 8
  store i32 0, i32* %9, align 4
  %10 = load i32*, i32** %3, align 8
  %11 = load i32*, i32** %4, align 8
  %12 = call i32 @ZEND_COMPARE_OBJECTS_FALLBACK(i32* %10, i32* %11)
  %13 = load i32*, i32** %3, align 8
  %14 = call %struct.TYPE_6__* @Z_SPLARRAY_P(i32* %13)
  store %struct.TYPE_6__* %14, %struct.TYPE_6__** %7, align 8
  %15 = load i32*, i32** %4, align 8
  %16 = call %struct.TYPE_6__* @Z_SPLARRAY_P(i32* %15)
  store %struct.TYPE_6__* %16, %struct.TYPE_6__** %8, align 8
  %17 = load %struct.TYPE_6__*, %struct.TYPE_6__** %7, align 8
  %18 = call i32* @spl_array_get_hash_table(%struct.TYPE_6__* %17)
  store i32* %18, i32** %5, align 8
  %19 = load %struct.TYPE_6__*, %struct.TYPE_6__** %8, align 8
  %20 = call i32* @spl_array_get_hash_table(%struct.TYPE_6__* %19)
  store i32* %20, i32** %6, align 8
  %21 = load i32*, i32** %5, align 8
  %22 = load i32*, i32** %6, align 8
  %23 = call i32 @zend_compare_symbol_tables(i32* %21, i32* %22)
  store i32 %23, i32* %9, align 4
  %24 = load i32, i32* %9, align 4
  %25 = icmp eq i32 %24, 0
  br i1 %25, label %26, label %44

26:                                               ; preds = %2
  %27 = load i32*, i32** %5, align 8
  %28 = load %struct.TYPE_6__*, %struct.TYPE_6__** %7, align 8
  %29 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %28, i32 0, i32 0
  %30 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %29, i32 0, i32 0
  %31 = load i32*, i32** %30, align 8
  %32 = icmp eq i32* %27, %31
  br i1 %32, label %33, label %40

33:                                               ; preds = %26
  %34 = load i32*, i32** %6, align 8
  %35 = load %struct.TYPE_6__*, %struct.TYPE_6__** %8, align 8
  %36 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %35, i32 0, i32 0
  %37 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %36, i32 0, i32 0
  %38 = load i32*, i32** %37, align 8
  %39 = icmp eq i32* %34, %38
  br i1 %39, label %44, label %40

40:                                               ; preds = %33, %26
  %41 = load i32*, i32** %3, align 8
  %42 = load i32*, i32** %4, align 8
  %43 = call i32 @zend_std_compare_objects(i32* %41, i32* %42)
  store i32 %43, i32* %9, align 4
  br label %44

44:                                               ; preds = %40, %33, %2
  %45 = load i32, i32* %9, align 4
  ret i32 %45
}

declare dso_local i32 @ZEND_COMPARE_OBJECTS_FALLBACK(i32*, i32*) #1

declare dso_local %struct.TYPE_6__* @Z_SPLARRAY_P(i32*) #1

declare dso_local i32* @spl_array_get_hash_table(%struct.TYPE_6__*) #1

declare dso_local i32 @zend_compare_symbol_tables(i32*, i32*) #1

declare dso_local i32 @zend_std_compare_objects(i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
